--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>william</h1>
+    <h1>New Name</h1>
     <img width="200px" src="profile.webp" alt="">
     <p>my profie pic</p>
 </body>
