--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h1>New Name</h1>
     <img width="200px" src="profile.webp" alt="">
     <p>my profie pic</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo facilis, rerum odit illo dolores odio deserunt optio inventore, eum officiis quas animi ipsam soluta! Eum tempora quisquam at in ipsum.</p>
+    </p>
 </body>
 </html>
