--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>varun</title>
 </head>
 <body>
-    <h1>william</h1>
+    <h1>Dear juli chlm</h1>
     <h1>New Name</h1>
-    <img width="200px" src="profile.webp" alt="">
-    <p>my profie pic</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo facilis, rerum odit illo dolores odio deserunt optio inventore, eum officiis quas animi ipsam soluta! Eum tempora quisquam at in ipsum.</p>
+    <img width="200px" src="baby.jpg" alt="">
+    <p>hi papa inda website naathan creat panna ...</p>
+    <p>Hi juli eppadi irukka , ooruku ponadum enna maranduta paravala , but enakku unna romba romba pudikkum theriyum ,because you are my baby and my favorate person ,na unakku pudikkada maari neriya panren adukkelam sorry but adhellem en panrene enakke theriyala aana enakku un kooda mattum tha happy ya feel aagudu , en life la vandadukku thanks thangooo , aprom naanuum un kozhanda tha so ennayum apo apo konjom care pannuda tataa love youu...</p>
     </p>
 </body>
 </html>
