--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>varun</title>
 </head>
 <body>
-    <h1>william</h1>
-    <h1>New Name</h1>
-    <img width="200px" src="profile.webp" alt="">
-    <p>my profie pic</p>
+    <h1 style="color: blue;">Hi juliyet thangoo Good Morning 🫣💙 </h1>
+    <br>
+    <img width="400px" src="Cute Babies Pics.jpg" alt="">
+    <br>
+    <p> Hi papa paathu ooruku ponga take care da ma , miss youuu lots i am always with you da ma 😘🫂 </p>
 </body>
 </html>
