--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <title>varun</title>
 </head>
 <body>
-    <h1>Dear juli chlm</h1>
-    <h1>New Name</h1>
-    <img width="200px" src="baby.jpg" alt="">
-    <p>hi papa inda website naathan creat panna ...</p>
-    <p>Hi juli eppadi irukka , ooruku ponadum enna maranduta paravala , but enakku unna romba romba pudikkum theriyum ,because you are my baby and my favorate person ,na unakku pudikkada maari neriya panren adukkelam sorry but adhellem en panrene enakke theriyala aana enakku un kooda mattum tha happy ya feel aagudu , en life la vandadukku thanks thangooo , aprom naanuum un kozhanda tha so ennayum apo apo konjom care pannuda tataa love youu...</p>
-    </p>
+    <h1 style="color: blue;">Hi juliyet thangoo Good Morning 🫣💙 </h1>
+    <br>
+    <img width="400px" src="b.jpg" alt="">
+    <p> Hi papa paathu ooruku ponga take care da ma , miss youuu lots i am always with you da ma 😘🫂 </p>
+    <br>
 </body>
 </html>
