--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <body>
   <div class="content">
     <!-- Heart Animation -->
-    <div class="heart">❤️</div>
+    <div class="heart">💗</div>
 
     <!-- Proposal Message -->
     <h1>Will You Be Mine?</h1>
@@ -99,7 +99,7 @@
   <script>
     function showProposal() {
       // Display a confirmation message when the button is clicked
-      alert("You just said YES! 💍❤️");
+      alert("Unakku vera option illa ma olunga kudaye iru , never chance to leave me 🫣😁💍❤️");
       // Optionally, you can redirect to another page or show a different message
       // window.location.href = "thank_you_page.html"; // Example of redirection
     }
