--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
     <div class="heart">💗</div>
 
     <!-- Proposal Message -->
-    <h1>Will You Be Mine?</h1>
-    <p>From the moment we met, my heart has been yours. I want to spend the rest of my life with you. Will you marry me?</p>
+    <h1>Life long En kudaye iruppiya, Please ? 🙂</h1>
+    <p>En life la unna thavira vera yaarukum na space thara maaten,neetha nee mattum tha , ennoda last breath un kuda mudiyanum that my dream , vittu poirada please 🙂❤️‍🩹</p>
     
     <!-- Call to Action Button -->
-    <button class="btn" onclick="showProposal()">Yes, I will!</button>
+    <button class="btn" onclick="showProposal()">click!</button>
   </div>
 
   <script>
